# mywaylrc

./: .gitignore  CMakeLists.txt  DesktopLyricWindow.cpp  DesktopLyricWindow.h  LyricFinder.cpp  LyricFinder.h  LyricParser.cpp  LyricParser.h  LyricSelectionDialog.cpp  LyricSelectionDialog.h  LyricTray.cpp  LyricTray.h  LyricWindowController.cpp  LyricWindowController.h  LyricsDirectoryDialog.cpp  LyricsDirectoryDialog.h  LyricsStyleDialog.cpp  LyricsStyleDialog.h  MprisPlayer.cpp  MprisPlayer.h  README.md  main.cpp  mpris_list
mpris_test/: player.cpp
